# lipu-copilot

./: 00-ARCHITECTURE.md  00-EXECUTIVE-SUMMARY.md  01-DATABASE-SCHEMA.md  02-API-CONTRACTS.md  03-FOLDER-STRUCTURE.md  04-USER-JOURNEYS.md  05-IMPLEMENTATION-ROADMAP.md  06-SPRINT-PLAN.md  07-SPRINT-0-EXECUTION-PLAN.md  AI_CONTEXT.md  DESIGN_VERSION.md  README.md
backend/: .env.example  README.md  alembic.ini  pyproject.toml  requirements-dev.txt  requirements.txt
backend/app/: __init__.py  main.py
backend/app/api/v1/: health.py  organizations.py  product_catalog.py  quotes.py  router.py  users.py
backend/app/core/: config.py
backend/app/db/: __init__.py  redis.py
backend/app/dependencies/: __init__.py  cache.py
backend/app/middleware/: security.py
backend/app/models/: product_category.py  product_variant.py  quote_item.py
backend/app/repositories/: organization.py  product.py  product_category.py  quote_item.py  user.py
backend/app/schemas/: __init__.py  base.py  pagination.py  product.py  product_variant.py  quote.py
backend/app/services/: __init__.py  base.py  organization.py  quote.py
backend/migrations/: env.py
backend/migrations/versions/: 0002_create_product_catalog.py
lipu-platform/apps/api/: .env.example  .flake8  Dockerfile  README.md  alembic.ini  package.json  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
lipu-platform/apps/api/app/: __init__.py  main.py
lipu-platform/apps/api/app/ai/: __init__.py
lipu-platform/apps/api/app/core/: __init__.py  exceptions.py  logging.py
lipu-platform/apps/api/app/db/: __init__.py  session.py
lipu-platform/apps/api/migrations/: env.py
(+272 files in other folders)
